fix blurry with css add ins

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@
   margin: 0;
   padding: 0;
   font-family: "VHS";
+  image-rendering: -moz-crisp-edges; /* Firefox */
+  image-rendering: -o-crisp-edges; /* Opera */
+  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
+  image-rendering: crisp-edges;
+  ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
 }
 
 .highlight {
